<?xml version="1.0" encoding="utf-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~  Project Name: Space Mines                                                                                                               ~
  ~  Class Name: /home/troylmarker/Documents/GitHub/SpaceMines/app/src/main/res/values/strings.xml                                           ~
  ~  File Name: strings.xml                                                                                                                  ~
  ~  File Creation Date: 6/19/2022                                                                                                           ~
  ~  File Creation Time: 19:15:23                                                                                                            ~
  ~  File Creator: troylmarker                                                                                                               ~
  ~                                                                                                                                          ~
  ~  Copyright 2022  by Troy L Marker Enterprises                                                                                            ~
  ~                                                                                                                                          ~
  ~  Licensed under the Apache License, Version 2.0 (the "License"); You may not use this file except in compliance with the License.        ~
  ~  You may obtain a copy of the License at                                                                                                 ~
  ~                                                                                                                                          ~
  ~       http://www.apache.org/licenses/LICENSE-2.0                                                                                         ~
  ~                                                                                                                                          ~
  ~  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,   ~
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.                                                                ~
  ~  See the License for the specific language governing permissions and limitations under the License.                                      ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
<resources>
    <string name="app_name">Space Mines</string>
    <string name="mines">Mines</string>
    <string name="planets">Planets</string>
    <string name="id"> ID:</string>
    <string name="name"> Name:</string>
    <string name="size"> Size:</string>
    <string name="planet_icon">Planet Icon</string>
    <string name="planet_name">Name</string>
    <string name="planet_size">Diameter</string>
    <string name="planet_id">ID</string>
    <string name="entertainment_fragment">Entertainment Fragment</string>
    <string name="housing_fragment">Housing Fragment</string>
    <string name="mines_fragment">Mines Fragment</string>
    <string name="population_fragment">Population Fragment</string>
    <string name="galaxy_fragment">Galaxy Fragment</string>
    <string name="galaxy_created">Galaxy Created</string>
    <string name="select">Select Button</string>

    <string name="total_minerals">Total Minerals</string>
    <string name="mineral">Mineral</string>
    <string name="mass_t">Mass (T)</string>
    <string name="value">Value($)</string>
    <string name="cu">Copper</string>
    <string name="empty">0</string>
    <string name="empty1">----</string>
    <string name="au">Gold</string>
    <string name="ag">Silver</string>
    <string name="pt">Platinum</string>
    <string name="pd">Palladium</string>
    <string name="mined_minerals">Mined Minerals</string>
    <string name="remaining_minerals">Remaining Minerals</string>
    <string name="current_workers">Current Workers On: %1$s</string>
    <string name="miner_staff_count">0</string>
    <string name="miner_supervisor_count">0</string>
    <string name="maintenance_staff_count">0</string>
    <string name="maintenance_supervisor_count">0</string>
    <string name="entertainer_staff_count">0</string>
    <string name="entertainer_supervisor_count">0</string>
    <string name="workers">Workers</string>
    <string name="department">Department</string>
    <string name="supervisors">Supervisors</string>
    <string name="planet">Planet</string>
    <string name="intMinerSupervisor">intMinerSupervisor</string>
    <string name="entertainers">Entertainers</string>
    <string name="maintenance">Maintenance</string>
    <string name="shipping_fragment">Shipping Fragment</string>
    <string name="in_transit_workers">Workers in transit to: %1$s</string>
    <string name="recruitment">Recruitment for planet: %1$s</string>
    <string name="max_recruitable">Maximum Recruitable per trip: %1$s</string>
    <string name="count">Count</string>
    <string name="recruit" translatable="false">Recruit Workers</string>

    <string name="miner">Miner</string>
    <string name="worker_recall" translatable="false">Recall Workers</string>
    <string name="transit_time">Transit Time</string>
    <string name="blank_transit_time">%1$s</string>


</resources>