<?xml version="1.0" encoding="utf-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~  Project Name: Space Mines                                                                                                               ~
  ~  Class Name: /home/troylmarker/Documents/GitHub/SpaceMines/app/src/main/res/layout/fragment_workers.xml                                  ~
  ~  File Name: fragment_workers.xml                                                                                                         ~
  ~  File Creation Date: 6/19/2022                                                                                                           ~
  ~  File Creation Time: 18:57:42                                                                                                            ~
  ~  File Creator: troylmarker                                                                                                               ~
  ~                                                                                                                                          ~
  ~  Copyright 2022  by Troy L Marker Enterprises                                                                                            ~
  ~                                                                                                                                          ~
  ~  Licensed under the Apache License, Version 2.0 (the "License"); You may not use this file except in compliance with the License.        ~
  ~  You may obtain a copy of the License at                                                                                                 ~
  ~                                                                                                                                          ~
  ~       http://www.apache.org/licenses/LICENSE-2.0                                                                                         ~
  ~                                                                                                                                          ~
  ~  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,   ~
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.                                                                ~
  ~  See the License for the specific language governing permissions and limitations under the License.                                      ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtCurrentPlanet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/current_workers"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txtCurrentMiners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/miner_staff_count"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txtCurrentMinerSupport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/miner_supervisor_count"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txtCurrentEntertainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/entertainer_staff_count"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txtCurrentEntertainerSupport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/entertainer_supervisor_count"
        android:textColor="@color/white" />

</LinearLayout>