<?xml version="1.0" encoding="utf-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~  Project Name: Space Mines                                                                                                               ~
  ~  Class Name: /home/troylmarker/Documents/GitHub/SpaceMines/app/src/main/res/layout/list_planet.xml                                       ~
  ~  File Name: list_planet.xml                                                                                                              ~
  ~  File Creation Date: 6/19/2022                                                                                                           ~
  ~  File Creation Time: 19:13:31                                                                                                            ~
  ~  File Creator: troylmarker                                                                                                               ~
  ~                                                                                                                                          ~
  ~  Copyright 2022  by Troy L Marker Enterprises                                                                                            ~
  ~                                                                                                                                          ~
  ~  Licensed under the Apache License, Version 2.0 (the "License"); You may not use this file except in compliance with the License.        ~
  ~  You may obtain a copy of the License at                                                                                                 ~
  ~                                                                                                                                          ~
  ~       http://www.apache.org/licenses/LICENSE-2.0                                                                                         ~
  ~                                                                                                                                          ~
  ~  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,   ~
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.                                                                ~
  ~  See the License for the specific language governing permissions and limitations under the License.                                      ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottomborder">
    <!--android:background="@android:color/transparent">-->


    <ImageView
        android:id="@+id/imgPlanetIcon"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="0"
        android:contentDescription="@string/planet_icon"
        android:background="@color/trans"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/okuda"
        android:background="@color/trans"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtPlanetId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@color/trans"
            android:text="@string/planet_id"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtPlanetName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/planet_name"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtPlanetSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/planet_size"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>